# FlickFinder

Movie App/: Action.cpp  Action.h  AdminGUI.cpp  AdminGUI.h  CMakeLists.txt  DynamicArray.h  FileRepository.cpp  FileRepository.h  GUI.cpp  GUI.h  Repository.cpp  Repository.h  TableMode.cpp  TableMode.h  UserGUI.cpp  UserGUI.h  WriteFile.cpp  WriteFile.h  domain.cpp  domain.h  exceptions.cpp  exceptions.h  main.cpp  movies.csv  movies.html  movies.txt  qtgui.cpp  qtgui.h  qtgui.ui  service.cpp  service.h  ui.cpp  ui.h  validator.cpp  validator.h
Movie App/tests/: test_domain.cpp  test_domain.h  test_dynamic_array.cpp  test_dynamic_array.h  test_repo.cpp  test_repo.h  test_service.cpp  test_service.h  test_validator.cpp  test_validator.h
